[project]
name = "homeassistant-invisoutlet"
version = "0.0.0"
# Home Assistant 2026.7+ requires Python 3.14.2; without this, uv's universal
# lock falls back to an old HA that lacks current test APIs.
requires-python = ">=3.14.2"

[tool.uv]
package = false

[dependency-groups]
test = [
  "pytest-homeassistant-custom-component",
  "pytest-cov",
  "invisoutlet==1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=custom_components.invisoutlet --cov-report=term-missing"
